tests/snapshots/payload_compat__query_rank_ready_for_query.snap
---
source: tests/payload_compat.rs
expression: payload
---
{
  "candidate_count": 0,
  "candidate_policy": "candidate-only",
  "included_count": 4,
  "query": "review gate",
  "ranked_paths": [
    {
      "candidate_kind": "included",
      "graph_score": 0,
      "kind": "qa",
      "lexical_overlap": 2,
      "metadata_score": 2,
      "path": "outputs/qa/2026-04-06-review-gate-benefits.md",
      "score": 24,
      "title": "2026-04-06-review-gate-benefits",
      "truth_boundary": "approved-live"
    },
    {
      "candidate_kind": "included",
      "graph_score": 1,
      "kind": "concept",
      "lexical_overlap": 2,
      "metadata_score": 1,
      "path": "wiki/live/concepts/review-gate.md",
      "score": 23,
      "title": "Review Gate",
      "truth_boundary": "approved-live"
    },
    {
      "candidate_kind": "included",
      "graph_score": 0,
      "kind": "briefing",
      "lexical_overlap": 0,
      "metadata_score": 2,
      "path": "wiki/briefings/researcher.md",
      "score": 4,
      "title": "Researcher Briefing",
      "truth_boundary": "approved-live"
    },
    {
      "candidate_kind": "included",
      "graph_score": 1,
      "kind": "summary",
      "lexical_overlap": 0,
      "metadata_score": 0,
      "path": "wiki/live/summaries/human/articles/2026-04-05-approved-summary.md",
      "score": 1,
      "title": "Summary: Approved Summary Source",
      "truth_boundary": "approved-live"
    }
  ],
  "vault_root": "[VAULT]"
}
