tests/snapshots/payload_compat__review_lint_ready_for_query.snap
---
source: tests/payload_compat.rs
expression: payload
---
{
  "issue_counts": {
    "audit_trail_gap": 1,
    "orphan_page": 1
  },
  "issues": [
    {
      "kind": "audit_trail_gap",
      "path": "outputs/audit/operations.jsonl"
    },
    {
      "kind": "orphan_page",
      "path": "outputs/qa/2026-04-06-review-gate-benefits.md"
    }
  ],
  "layout_family": "review-gated",
  "vault_root": "[VAULT]"
}
